# mood-msg

./: Cargo.toml  README.md  install.sh  moods.json
src/: main.rs
