[package]
name = "mood-msg"
version = "0.1.0"
edition = "2021"
authors = ["Piyush <stalain3@email.com>"]
description = "Generate witty, mood-based git commit messages"
license = "MIT"
repository = "https://github.com/piyush-itis/mood-msg"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
